--- a/react-figma/src/PromotionsSection.css
+++ b/react-figma/src/PromotionsSection.css
@@ -1,6 +1,8 @@
 .promotions {
     display: flex;
     justify-content:center;
+    text-align: center;
+    margin-top: 30px;
     gap: 2rem;
     padding: 2rem 1rem;
   }
@@ -9,11 +11,10 @@
     background: black;
     color: white;
     padding: 3rem 2rem;
-    align-items: center;
     text-align: center;
     width: 505px;
     height: 329px;
-    left: 1000px;
+    
    
 
 
