--- a/react-figma/src/components/HeroSection/HeroSection.css
+++ b/react-figma/src/components/HeroSection/HeroSection.css
@@ -13,17 +13,24 @@
   
   .hero-content {
     max-width: 600px;
+    margin-left: 800px;
   }
   
   .hero-content h1 {
-    
-    font-size: 2.5rem;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 100px;
+    font-weight: 800px;
+    line-height: 48px;
+    text-align: center;
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.25);
+
+    font-size: 3rem;
     margin-bottom: 1rem;
   }
   
   .shop-now-btn {
     background-color: transparent;
-    border: 2px solid white;
+    border: 5px solid white;
     padding: 0.5rem 1rem;
     color: white;
     font-size: 1rem;
